<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:iconTint="@color/black"
            android:title="@string/nav_home_title" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/profile_icon"
            android:iconTint="@color/black"
            android:title="@string/nav_account_title" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/translate_icon"
            android:iconTint="@color/black"
            android:title="@string/nav_language_title" />
    </group>

    <item android:title="">
        <menu
            android:id="@+id/third_section"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/nav_logout_title" />
        </menu>
    </item>

</menu>