<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleAlertDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/btn_report"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnCerrarReporte"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="12dp"
                android:background="@drawable/button_secondary"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/close_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:fontFamily="@font/roboto_thin"
            android:text="@string/report_reason"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtMotivoReporte"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border_list_view"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/report_description"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtDescripcionReporte"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border_list_view"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/primary_blue"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/primary_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"

            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/report_default"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAtrasado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_secondary"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/report_time" />

            <Button
                android:id="@+id/btnConduceMal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_secondary"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/report_fast" />

            <Button
                android:id="@+id/btnMalCambio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_secondary"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/report_money" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNoSeDetuvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_secondary"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/report_bustop" />

            <Button
                android:id="@+id/btnMalServicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_secondary"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/report_driver" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmarReporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/button_report"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btn_report" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>