<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentVistaIdioma"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.slideshow.">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/change_language"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/txtEspañol1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageES"
                android:text="@string/len_spanish"

                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtEspañol2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/spanish_latam"
                android:textColor="@color/black"
                android:onClick="changeLanguageES"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/txtIngles1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageEN"
                android:text="@string/len_english"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIngles2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageEN"
                android:text="@string/english_usa"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/txtFrances"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageFR"
                android:text="@string/len_french"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFrances2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageFR"
                android:text="@string/french_fr"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/txtAleman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageDE"
                android:text="@string/len_german"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAleman2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageDE"
                android:text="@string/german_al"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/txtPortugues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageBR"
                android:text="@string/len_portuguese"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPortugues2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="changeLanguageBR"
                android:text="@string/portuguese_br"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:background="@color/grey" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>