<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/txtIdLvd"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="25"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:text="000"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:background="@color/secondary_blue"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="70"
        android:background="@drawable/border_list_view"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="15dp">


        <TextView
            android:id="@+id/txtChoferLvd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_bold"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/driver_list_design"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtRutaLvd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_bold"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/route_list_design"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtEstadoLvd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_bold"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/state_list_design"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>